Add files and folders in the final branch
