# app/models/twowheeler.rb
@@ -1,15 +1,12 @@
 class Twowheeler < ApplicationRecord
-   
+  has_many :reservations
   has_many :users, through: :reservations
-  has_many :reservations, dependent: :destroy
 
   validates :name, presence: true
-  validates :description, presence: true
+  validates :description, length: { in: 20..120 }
   validates :image_url, presence: true
   validates :price, presence: true
   validates :model_year, presence: true
   validates :engine_type, presence: true
   validates :fuel_type, presence: true
-  
 end
-
