# app/models/user.rb
@@ -1,7 +1,6 @@
 class User < ApplicationRecord
- 
-  has_many :reservations, dependent: :destroy
+  has_many :reservations
   has_many :twowheelers, through: :reservations
-
-  validates :name, presence: true, length: { minimum: 2, maximum: 25 }
+  validates :username, length: { in: 6..20 }
+  validates :username, uniqueness: true
 end
